# aws-cdk-pipeline-setup

./: app.py  buildspec.yml  cdk.json  mypy.ini  pyproject.toml
aws_cdk_pipeline_setup/: aws_cdk_pipeline_setup_stack.py
src/lambdas/generator_lambda/src/: lambda_function.py
src/stacks/: lambda_stack.py  pipeline_stack.py  pipeline_stack_dev.py  pipeline_stack_prod.py  repository_stack.py
src/stages/: application_stage.py
tests/unit/: test_aws_cdk_pipeline_setup_stack.py
